--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 <div style="padding: 20px; background-color: #fff; margin: 20px; border-radius: 8px;
             box-shadow: 0 0 10px rgba(0,0,0,0.1); max-width: 400px; margin-inline: auto;">
   <h2 style="text-align: center;">معلومات التواصل</h2>
-  <form style="display: flex; flex-direction: column; gap: 15px;">
+  <form id="orderForm" style="display: flex; flex-direction: column; gap: 15px;">
     <label for="name" style="font-weight: bold;">الأسم الثلاثي:</label>
     <input type="text" id="name" name="name" placeholder="اكتب اسمك الثلاثي هنا"
            style="padding: 10px; border-radius: 5px; border: 1px solid #ccc;
@@ -275,7 +275,7 @@
   };
 </script>
 <script>
-  document.querySelector('form').addEventListener('submit', function(e) {
+  document.getElementById('orderForm').addEventListener('submit', function(e) {
     e.preventDefault();
 
     // Collect form data
