--- a/index.html
+++ b/index.html
@@ -278,17 +278,18 @@
 document.getElementById('orderForm').addEventListener('submit', function(e) {
   e.preventDefault();
 
-  const data = {
-    name: document.getElementById("name").value,
-    mobile: document.getElementById("mobile").value,
-    address: document.getElementById("address") ? document.getElementById("address").value : '',
-    s: document.getElementById("qty-s").value,
-    m: document.getElementById("qty-m").value,
-    l: document.getElementById("qty-l").value,
-    xl: document.getElementById("qty-xl").value,
-    xxl: document.getElementById("qty-xxl").value,
-    xxxl: document.getElementById("qty-xxxl").value,
-  };
+const data = {
+  name: document.getElementById("name").value,
+  mobile: document.getElementById("mobile").value,
+  address: document.getElementById("address").value,
+  s: document.getElementById("qty-s").value,
+  m: document.getElementById("qty-m").value,
+  l: document.getElementById("qty-l").value,
+  xl: document.getElementById("qty-xl").value,
+  xxl: document.getElementById("qty-xxl").value,
+  xxxl: document.getElementById("qty-xxxl").value
+};
+
 
   fetch('https://script.google.com/macros/s/AKfycbzvJDGxndLtZtPLft0qJxHazjDt_60PZMOmRJyR9cRv3J3uSLTh--vVvbXOi-70kSjh/exec', {
     method: 'POST',
